syntax = "proto3";
option csharp_namespace = "RentalSystem.Shared.Protos";
package common;

message EmptyRequest {}

message ActionResponse {
  bool success = 1;
  string message = 2;
}